# seeker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh
.github/workflows/: clippy.yaml  test.yml
config/: env.conf  seeker-daemon-process.service
config/hooks/: post-receive.sh
daemon-client/: Cargo.toml
daemon-client/src/: error.rs  lib.rs  test.rs
daemon-command/: Cargo.toml
daemon-command/src/: lib.rs
daemon-core/: Cargo.toml
daemon-core/src/: changes_tracker.rs  command.rs  error.rs  indexer.rs  lib.rs  response.rs  server.rs  setup_repo.rs  state.rs
daemon-core/src/changes_tracker/: mod.rs
daemon-core/src/changes_tracker/test/: mod.rs  utils.rs
daemon-process/: Cargo.toml
daemon-process/src/: error.rs  log_config.rs  main.rs
daemon-server-core/: Cargo.toml
daemon-server-core/src/: command.rs  error.rs  lib.rs  response.rs  server.rs
daemon-server/src/: main.rs  server.rs
elasticsearch-indexer/: Cargo.toml
elasticsearch-indexer/src/: error.rs  lib.rs
seeker-daemon-server/: Cargo.toml
seeker-env/: Cargo.toml
seeker-env/src/: error.rs  lib.rs
seeker-hook/: Cargo.toml
seeker-hook/src/: args.rs  changes_tracker.rs  daemon_client.rs  error.rs  main.rs  setup_repo.rs  state_manager.rs
seeker-hook/src/logger/: mod.rs
seeker-hook/src/test/utils/: mod.rs  setup_repo.rs  test_repo.rs
