[workspace]
members = [
  "daemon-client",
  "daemon-process",
  "daemon-core",
  "seeker-hook",
  "elasticsearch-indexer"
]
resolver = "3"

[workspace.dependencies]
seeker-daemon-core = {path = "daemon-core"}
seeker-daemon-client = {path = "daemon-client"}
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
async-trait = "0.1.89"
