[workspace]
members = [
  "daemon-client",
  "daemon-process",
  "daemon-core",
  "seeker-hook",
  "seeker-env",
  "elasticsearch-indexer"
]
resolver = "3"

[workspace.dependencies]
seeker-daemon-core = {path = "daemon-core"}
seeker-daemon-client = {path = "daemon-client"}
seeker-env = {path = "seeker-env"}
elasticsearch-indexer = {path = "elasticsearch-indexer"}
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
thiserror = "2.0.16"
anyhow = "1.0.100"
async-trait = "0.1.89"
