[package]
name = "seeker-daemon-process"
version = "0.1.0"
edition = "2024"

[dependencies]
seeker-daemon-core = {workspace = true, features = ["server"]}
tokio = {workspace = true}
log = {workspace = true}
seeker-env = {workspace = true}
thiserror = {workspace = true}
anyhow = {workspace = true}
fern = "0.7"
humantime = "2.2.0"
async-trait = {workspace = true}
