[package]
name = "elasticsearch-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
elasticsearch = "9.1.0-alpha.1"
seeker-daemon-core = { workspace = true, features = ["indexer"] }
serde = "1.0.227"
serde_json = "1.0.145"
tokio = { workspace = true }
async-trait = {workspace = true}
anyhow = {workspace = true}
thiserror = {workspace = true}
